Include sheet for duplicated pipelineconfigsets

--- a/utils/Extract-Pipeline-Metadata.ipynb
+++ b/utils/Extract-Pipeline-Metadata.ipynb
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 170,
    "id": "d28cc438",
    "metadata": {},
    "outputs": [
@@ -718,7 +718,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3183c9f3db2447d8b860085ae258308a"
+       "model_id": "e3f501c3de0c4135a73ff7aabea976fb"
       },
       "text/html": [
        "<div>\n",
@@ -747,115 +747,85 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MD_PRCH_DELV_CNFRMS_9_p01</td>\n",
-       "      <td>p01</td>\n",
-       "      <td>MD_PRCH_DELV_CNFRMS_9</td>\n",
-       "      <td>MD_PRCH_DELV_CNFRMS</td>\n",
+       "      <th>155</th>\n",
+       "      <td>SAP_MD_MATL_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI</td>\n",
+       "      <td>tai</td>\n",
+       "      <td>MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI</td>\n",
+       "      <td>MD_MATL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>SAP_01_MD_SLS_ORDR_LINE_bwi</td>\n",
-       "      <td>bwi</td>\n",
-       "      <td>SAP_01_MD_SLS_ORDR_LINE_bwi</td>\n",
-       "      <td>MD_SLS_ORDR_LINE</td>\n",
+       "      <th>170</th>\n",
+       "      <td>SAP_MD_MATL_TAI</td>\n",
+       "      <td>tai</td>\n",
+       "      <td>SAP_MD_MATL_TAI</td>\n",
+       "      <td>MD_MATL</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>SAP_MD_MATL_LOC_BBA_BBL_BBN</td>\n",
+       "      <th>190</th>\n",
+       "      <td>SAP_MD_BILL_DOC_HDR_BBA_BBN</td>\n",
        "      <td>BBN</td>\n",
-       "      <td>SAP_MD_MATL_LOC_BBA_BBL_BBN_02</td>\n",
-       "      <td>MD_MATL_LOC</td>\n",
+       "      <td>SAP_MD_BILL_DOC_HDR_BBA_BBN</td>\n",
+       "      <td>MD_BILL_DOC_HDR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>SAP_MD_MATL_LOC_BBA_BBL_BBN</td>\n",
+       "      <th>191</th>\n",
+       "      <td>SAP_MD_BILL_DOC_HDR_BBA_BBN</td>\n",
        "      <td>BBA</td>\n",
-       "      <td>SAP_MD_MATL_LOC_BBA_BBL_BBN_02</td>\n",
-       "      <td>MD_MATL_LOC</td>\n",
+       "      <td>SAP_MD_BILL_DOC_HDR_BBA_BBN</td>\n",
+       "      <td>MD_BILL_DOC_HDR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>SAP_MD_MATL_LOC_BBA_BBL_BBN</td>\n",
-       "      <td>BBL</td>\n",
-       "      <td>SAP_MD_MATL_LOC_BBA_BBL_BBN_02</td>\n",
-       "      <td>MD_MATL_LOC</td>\n",
+       "      <th>287</th>\n",
+       "      <td>SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS</td>\n",
+       "      <td>MBP</td>\n",
+       "      <td>SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP</td>\n",
+       "      <td>MD_MATL_INV</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>321</th>\n",
+       "      <td>SAP_MD_MATL_INV_MBP</td>\n",
+       "      <td>MBP</td>\n",
+       "      <td>SAP_MD_MATL_INV_MBP</td>\n",
+       "      <td>MD_MATL_INV</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>370</th>\n",
-       "      <td>JDE_MD_MATL_LOC_JSW</td>\n",
-       "      <td>JSW</td>\n",
-       "      <td>JDE_MD_MATL_LOC_JSW</td>\n",
-       "      <td>MD_MATL_LOC</td>\n",
+       "      <th>345</th>\n",
+       "      <td>SAP_MD_BILL_DOC_HDR_HMD</td>\n",
+       "      <td>BBA</td>\n",
+       "      <td>SAP_01_MD_BILL_DOC_HDR</td>\n",
+       "      <td>MD_BILL_DOC_HDR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>371</th>\n",
-       "      <td>PPLN_MES_MD_WRKF_2_mvc</td>\n",
-       "      <td>mvc</td>\n",
-       "      <td>PPLN_MES_MD_WRKF_2</td>\n",
-       "      <td>MES_MD_WRKF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>372</th>\n",
-       "      <td>SAP_MD_SLS_DOC_PTNR_FUNC_HMD</td>\n",
-       "      <td>HM2</td>\n",
-       "      <td>SAP_MD_SLS_DOC_PTNR_FUNC_HM2</td>\n",
-       "      <td>MD_SLS_DOC_PTNR_FUNC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>373</th>\n",
-       "      <td>SAP_MD_SLS_DOC_PTNR_FUNC_HMD</td>\n",
-       "      <td>HMD</td>\n",
-       "      <td>SAP_MD_SLS_DOC_PTNR_FUNC_HM2</td>\n",
-       "      <td>MD_SLS_DOC_PTNR_FUNC</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>374</th>\n",
-       "      <td>MD_PRCH_DELV_CNFRMS_11_bw2</td>\n",
-       "      <td>bw2</td>\n",
-       "      <td>MD_PRCH_DELV_CNFRMS_11</td>\n",
-       "      <td>MD_PRCH_DELV_CNFRMS</td>\n",
+       "      <th>348</th>\n",
+       "      <td>SAP_MD_BILL_DOC_HDR_HMD</td>\n",
+       "      <td>BBN</td>\n",
+       "      <td>SAP_01_MD_BILL_DOC_HDR</td>\n",
+       "      <td>MD_BILL_DOC_HDR</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>375 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 Pipeline UI Name Pipeline Config Set  \\\n",
-       "0       MD_PRCH_DELV_CNFRMS_9_p01                 p01   \n",
-       "1     SAP_01_MD_SLS_ORDR_LINE_bwi                 bwi   \n",
-       "2     SAP_MD_MATL_LOC_BBA_BBL_BBN                 BBN   \n",
-       "3     SAP_MD_MATL_LOC_BBA_BBL_BBN                 BBA   \n",
-       "4     SAP_MD_MATL_LOC_BBA_BBL_BBN                 BBL   \n",
-       "..                            ...                 ...   \n",
-       "370           JDE_MD_MATL_LOC_JSW                 JSW   \n",
-       "371        PPLN_MES_MD_WRKF_2_mvc                 mvc   \n",
-       "372  SAP_MD_SLS_DOC_PTNR_FUNC_HMD                 HM2   \n",
-       "373  SAP_MD_SLS_DOC_PTNR_FUNC_HMD                 HMD   \n",
-       "374    MD_PRCH_DELV_CNFRMS_11_bw2                 bw2   \n",
+       "                                Pipeline UI Name Pipeline Config Set  \\\n",
+       "155  SAP_MD_MATL_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI                 tai   \n",
+       "170                              SAP_MD_MATL_TAI                 tai   \n",
+       "190                  SAP_MD_BILL_DOC_HDR_BBA_BBN                 BBN   \n",
+       "191                  SAP_MD_BILL_DOC_HDR_BBA_BBN                 BBA   \n",
+       "287          SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS                 MBP   \n",
+       "321                          SAP_MD_MATL_INV_MBP                 MBP   \n",
+       "345                      SAP_MD_BILL_DOC_HDR_HMD                 BBA   \n",
+       "348                      SAP_MD_BILL_DOC_HDR_HMD                 BBN   \n",
        "\n",
-       "                    Pipeline Folder      Potential Object  \n",
-       "0             MD_PRCH_DELV_CNFRMS_9   MD_PRCH_DELV_CNFRMS  \n",
-       "1       SAP_01_MD_SLS_ORDR_LINE_bwi      MD_SLS_ORDR_LINE  \n",
-       "2    SAP_MD_MATL_LOC_BBA_BBL_BBN_02           MD_MATL_LOC  \n",
-       "3    SAP_MD_MATL_LOC_BBA_BBL_BBN_02           MD_MATL_LOC  \n",
-       "4    SAP_MD_MATL_LOC_BBA_BBL_BBN_02           MD_MATL_LOC  \n",
-       "..                              ...                   ...  \n",
-       "370             JDE_MD_MATL_LOC_JSW           MD_MATL_LOC  \n",
-       "371              PPLN_MES_MD_WRKF_2           MES_MD_WRKF  \n",
-       "372    SAP_MD_SLS_DOC_PTNR_FUNC_HM2  MD_SLS_DOC_PTNR_FUNC  \n",
-       "373    SAP_MD_SLS_DOC_PTNR_FUNC_HM2  MD_SLS_DOC_PTNR_FUNC  \n",
-       "374          MD_PRCH_DELV_CNFRMS_11   MD_PRCH_DELV_CNFRMS  \n",
-       "\n",
-       "[375 rows x 4 columns]"
+       "                                 Pipeline Folder Potential Object  \n",
+       "155  MD_MATL_SAP_ATL_BWI_FSN_GEU_MRS_P01_SVS_TAI          MD_MATL  \n",
+       "170                              SAP_MD_MATL_TAI          MD_MATL  \n",
+       "190                  SAP_MD_BILL_DOC_HDR_BBA_BBN  MD_BILL_DOC_HDR  \n",
+       "191                  SAP_MD_BILL_DOC_HDR_BBA_BBN  MD_BILL_DOC_HDR  \n",
+       "287      SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP      MD_MATL_INV  \n",
+       "321                          SAP_MD_MATL_INV_MBP      MD_MATL_INV  \n",
+       "345                       SAP_01_MD_BILL_DOC_HDR  MD_BILL_DOC_HDR  \n",
+       "348                       SAP_01_MD_BILL_DOC_HDR  MD_BILL_DOC_HDR  "
       ]
      },
      "metadata": {},
@@ -913,7 +883,11 @@
     "        except:\n",
     "             print(\"ERROR:\" + f)\n",
     "df9 = pd.DataFrame(pipelineConfigSets)\n",
-    "df9\n",
+    "\n",
+    "df10 = df9[df9.duplicated(subset=['Potential Object','Pipeline Config Set'], keep=False)]\n",
+    "df10\n",
+    "\n",
+    "\n",
     "#print(pipelineConfigSets)\n",
     "#df8 = pd.DataFrame(pipelinesWithMultiplePackages)\n",
     "#df8"
@@ -1011,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 171,
    "id": "f9db8246",
    "metadata": {},
    "outputs": [],
@@ -1025,7 +999,8 @@
     "    df5.to_excel(writer, sheet_name=\"Job Check\", index=False)\n",
     "    df7.to_excel(writer, sheet_name=\"WheelCheck\", index=False)\n",
     "    df8.to_excel(writer, sheet_name=\"ExtraPackage\", index=False)\n",
-    "    df9.to_excel(writer, sheet_name=\"PipelineConfigs\", index=False)"
+    "    df9.to_excel(writer, sheet_name=\"PipelineConfigs\", index=False)\n",
+    "    df10.to_excel(writer, sheet_name=\"DupPplnConfig\", index=False)"
    ]
   },
   {
